Fixed subtitle alignment issue on setup

--- a/ghost/admin/app/styles/layouts/flow.css
+++ b/ghost/admin/app/styles/layouts/flow.css
@@ -50,6 +50,7 @@
 
 .gh-setup .gh-flow-content header {
     margin: 0 0 1rem;
+    text-align: center;
 }
 
 .gh-setup .gh-flow-content header svg {
